# notebooks

./: .gitignore  Untitled.ipynb  attention.ipynb  cs224n_hw02.ipynb  distributions.ipynb  env.yml  ir_hw04.ipynb  model_testing.ipynb  msd.ipynb  nonlinear_hw01.ipynb  nonlinear_hw02.ipynb  pyproject.toml  requirements.txt  sent_embeddings.ipynb  setup.py  sos_data.ipynb  sos_lora_synthetic.ipynb  vit_patchify.ipynb
nbtools/sent_encoders/: __init__.py  hf_models.py
nbtools/utils/: __init__.py  display.py  files.py  menus.py  strings.py  tensor_utils.py  validate.py
notebooks/calculus/: part01.ipynb
notebooks/data_processing/: cnn_dm_analysis.ipynb  wikipedia.ipynb  wikipedia_analysis.ipynb
notebooks/eval/: metric_benchmarks.ipynb
notebooks/finance/: real_estate.ipynb
notebooks/iac/: plots.ipynb
notebooks/infilling/: analysis.ipynb  preliminary.ipynb  scores_1000.csv
notebooks/nonlinear/: nonlinear_hw01.ipynb  nonlinear_hw02.ipynb
notebooks/probability_theory/: part01.ipynb
notebooks/sent_encoders/: mteb_eval.ipynb  sent_embeddings.ipynb  sent_encoder_tests.ipynb
notebooks/sofsat/: auto_enc_eval.ipynb  infilling.ipynb  llm_eval.ipynb  llm_eval_updated.ipynb  llm_redundancy.ipynb  metric.ipynb  sentence_redundancy.ipynb  sos_data.ipynb  sos_lora_synthetic.ipynb
notebooks/testing/: bart.ipynb  diffkendal.ipynb  disposable.ipynb  distributions.ipynb  encoder_testing.ipynb  mltk_data.ipynb  model_testing.ipynb  msd.ipynb  roc_stories.ipynb  tensor_utils.ipynb  text.ipynb  timing.ipynb
notebooks/tricks/: coo_mat_tricks.ipynb  cs224n_hw02.ipynb  generators.ipynb  regular_expression.ipynb  vit_patchify.ipynb
scripts/test/: model_timing  (+1 more)
(+6 files in other folders)
